# mc_section_collision_sensor

./: .gitignore  CMakeLists.txt  vcpkg.json
etc/: ADCCollisionSensor.in.yaml  SectionCollisionSensor.yaml
src/: ADCCollisionSensor.cpp  ADCCollisionSensor.h  LpfThreshold.cpp  LpfThreshold.h  ROS2Subscriber.h  SectionCollisionSensor.cpp  SectionCollisionSensor.h
tests/etc/: mc_rtc.yaml
